# ghost-wallet-hunter

./: .env.production  .gitignore  DATABASE_SETUP_GUIDE.md  DEPLOY_READY.md  ENDPOINTS_DOCUMENTATION.md  FRONTEND_DOCUMENTATION.md  IMPLEMENTACAO_COMPLETA_A2A_JULIAOS.md  IMPLEMENTATION_COMPLETE.md  LIVE_STATUS.md  PERFORMANCE_OPTIMIZATION_FINAL.md  PRODUCTION_FIXES.md  PROJECT_STATUS.md  README.md  REPOSITORY_ORGANIZATION.md  SETUP.md  TECHNICAL_SUMMARY.md  commit_changes.ps1  deploy.sh  docker-compose.yml  ghost_a2a_test_results.json  ghost_detective_factory.py  ghost_detectives_setup_results.json  juliaos_connection.py  prepare_environment.ps1  render.yaml  setup.ps1  start_local_development.ps1  test_build.js  test_fase_3_complete.py  test_interface.html
a2a/: ghost_server.py  minimal_server.py  (+6 more)
juliaos-core/a2a/: README.md  pyproject.toml
juliaos-core/a2a/src/a2a/: server.py
juliaos-core/a2a/src/a2a/agents/: card.py  executors.py
juliaos-core/python/: pyproject.toml
juliaos-core/python/scripts/: run_moderator_agent.py  run_plan_execute_agent.py
juliaos-core/python/src/_juliaos_client_api/: __init__.py  api_client.py
juliaos-core/python/src/juliaos/: agent.py  juliaos_connection.py
juliaos/a2a/: README.md  ghost_server.py  minimal_server.py  pyproject.toml  render.yaml  requirements-a2a.txt  setup_ghost_a2a.py  setup_ghost_detectives.py  setup_ghost_detectives_simple.py
juliaos/a2a/docker/: Dockerfile  Dockerfile.minimal
juliaos/a2a/src/a2a/: a2a_types.py  final_server.py  final_server_julia.py  ghost_swarm_coordinator.py  julia_bridge.py  server.py
(+933 files in other folders)
