[project]
name = "a2a"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "starlette>=0.27.0",
    "pydantic>=1.10.5,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages    = ["a2a"]
